# termite-Terminal-Editor

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  termite
.cmake/api/v1/reply/: cache-v2-9906e1d739edd8c1d36e.json  cache-v2-ee2ccb73ae35dc979442.json  cmakeFiles-v1-20bd4f8ea83bb1ea080d.json  codemodel-v2-cefcc3ecec59874b3c63.json  index-2025-12-14T18-27-05-0543.json  index-2025-12-14T19-28-52-0139.json  target-termite-a7cce7d8bdf4139cddff.json  toolchains-v1-f97a08a91914bd4e619d.json
include/termite/: ansi.hpp  buffer.hpp  debug.hpp  editor.hpp  file_io.hpp  gap_buffer.hpp  input.hpp  platform.hpp  screen.hpp  syntax.hpp
src/: buffer.cpp  debug.cpp  editor.cpp  editor_input.cpp  editor_render.cpp  file_io.cpp  gap_buffer.cpp  input.cpp  main.cpp  platform_posix.cpp  platform_win.cpp  screen.cpp  syntax.cpp
